# tee

./: .flake8  .gitignore  .pypirc  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
tee/: __init__.py  __init__.pyi  condition.py  connection.py  database.py  delete.py  errors.py  executor.py  fields.py  insert.py  model.py  operation.py  select.py  statement.py  update.py  where.py
tests/: test_tee.py
