[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tee-orm"
version = "0.1.0"
description = "一个小巧的 Python ORM 框架，带有完整的类型系统支持"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "tian-gua", email = "your-email@example.com"}
]
maintainers = [
    {name = "tian-gua", email = "your-email@example.com"}
]
keywords = ["orm", "database", "mysql", "python", "typing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "PyMySQL>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/tian-gua/tee"
Documentation = "https://github.com/tian-gua/tee#readme"
Repository = "https://github.com/tian-gua/tee"
"Bug Tracker" = "https://github.com/tian-gua/tee/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tee*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=tee",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]